--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.12",
+    "@types/puppeteer": "^5.4.4",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "axios": "^0.25.0",
     "cheerio": "^1.0.0-rc.10",
+    "puppeteer": "^13.1.2",
     "winston": "^3.5.0"
   }
 }
